
	* field.c (validate_usage): fixed SIGSEGV when PICTURE is missing
	* field.c: renamed (check_picture_item) to (create_implicit_picture)
	  and always define an implicit picture (even for fields with errors
	  because of their references)
	* field.c: renamed (check_picture_item, is_numeric_usage): define
	  numeric implicit pictures for numeric USAGEs

2018-06-24  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fixed 'output_size' to adjust size by starting offset
	* typeck.c: If destination of a MOVE is variable_size and
	   there is no reference mod (or start position is 1) then
	   emit code to MOVE fixed size header of field first as it
	   may be holding the DEPENDING ON fields/values then do
	   a complete MOVE.

2018-06-24  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_call): use X"nn" as name for error messages
	  concerning system library CALLs

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* parser.y, reserved.c, tree.c, tree.h: added intrinsic functions
	  CONTENT-LENGTH and CONTENTS-OF

2018-06-20  Ron Norman <rjn@inglenet.com>

	* codgen.c: emit code for 'Default Error Handler' in nested
	  subroutines when the main module has GLOBAL files, fixing bug #87

2018-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added POS (only reserved for acu and default)
	  as alternative for AT POSITION, allow both in SCREEN definitions
	* parser.y: improved ACUCOBOL-GT parsing of USAGE HANDLE: allow
	  HANDLE [OF] control-type (support pending), better error messages
	  for unknown HANDLE types
	* parser.y, reserved.c: added COMP-0 as PENDING
	* parser.y: added Micosoft COBOL position specifier

2018-06-04  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: remove path output when creating manpage

2018-05-24  Ron Norman <rjn@inglenet.com>
	* tree.c: Limit compile time constant expression resolution
	    to values small than 9 digits. (To avoid a problem on macOS)

2018-05-23  Ron Norman <rjn@inglenet.com>